add Scheduling to UpdateCurrencyService

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,4 +22,9 @@ spring:
           auto: none
 client:
   url: https://cbr.ru/scripts/XML_daily.asp
+currency:
+  update:
+    rate:
+      cron: "0 0 0/1 ? * *"
+
 
